[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "obj_segcount"
version = "1.0.0"
description = "Librería para segmentación y conteo de objetos en superficies de trabajo"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Héctor Alexis Santos"},
    {name = "Kane Aaron Soto Rodríguez"},
    {name = "Gerardo Alejandro Orozco Gutiérrez"}
]
keywords = [
    "computer-vision",
    "image-processing",
    "segmentation",
    "object-counting",
    "edge-detection",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.5.0",
]

[project.urls]
Repository = "https://github.com/HectorSantos291/obj_segcount"
Issues = "https://github.com/HectorSantos291/obj_segcount/issues"

[tool.setuptools.packages.find]
include = ["obj_segcount*"]